--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,7 +1,22 @@
+spring:
+  datasource:
+    url: jdbc:h2:mem:default
+    driver-class-name: org.h2.Driver
+    username: root
+    password: root
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+
 jwt:
   token:
     secret: fdjk34xm3=
     lifetime: 30000000
+
 server:
+  port: 5100
+
+  error:
+    include-message: always
+
   servlet:
     context-path: /api
