--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,11 +1,14 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:default
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://localhost:3306/amazen?createDatabaseIfNotExist=true
+    driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: root
+    password:
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
+    database-platform: org.hibernate.dialect.MySQL5Dialect
+    generate-ddl: true
 
 jwt:
   token:
